--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GP10_Univerisdad_Parte1
 excludes=
 file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\Facu\\Documents\\mariadb-java-client-3.1.4.jar
+file.reference.mariadb-java-client-3.1.4.jar-1=C:\\Users\\Santino\\Desktop\\mariadb-java-client-3.1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.1.4.jar}
+    ${file.reference.mariadb-java-client-3.1.4.jar}:\
+    ${file.reference.mariadb-java-client-3.1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=GP10_Univerisdad_Parte1
-main.class=gp10_univerisdad_parte1.GP10_Univerisdad_Parte1
+main.class=Vistas.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
