--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/GP10_Univerisdad_Parte1
 excludes=
 file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\Facu\\Documents\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar-1=C:\\Users\\Santino\\Desktop\\mariadb-java-client-3.1.4.jar
+file.reference.mariadb-java-client-3.1.4.jar-2=D:\\Universidad\\Primer a\u00f1o\\Segundo cuatrimestre\\Lab programacion 1\\Trasversal\\mariadb-java-client-3.1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.1.4.jar}:\
-    ${file.reference.mariadb-java-client-3.1.4.jar-1}
+    ${file.reference.mariadb-java-client-3.1.4.jar-1}:\
+    ${file.reference.mariadb-java-client-3.1.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
